@@ -1,16 +1,23 @@
 package com.tennisfolio.Tennisfolio.Tournament.application;
 
 import com.tennisfolio.Tennisfolio.Tournament.domain.Tournament;
+import com.tennisfolio.Tennisfolio.Tournament.repository.TournamentEntity;
 import com.tennisfolio.Tennisfolio.Tournament.repository.TournamentRepository;
+import com.tennisfolio.Tennisfolio.category.repository.CategoryEntity;
+import com.tennisfolio.Tennisfolio.category.repository.CategoryRepository;
 import com.tennisfolio.Tennisfolio.infrastructure.api.base.StrategyApiTemplate;
 import com.tennisfolio.Tennisfolio.infrastructure.api.tournament.categoryTournaments.CategoryTournamentsDTO;
 import com.tennisfolio.Tennisfolio.infrastructure.api.tournament.leagueDetails.LeagueDetailsDTO;
 import com.tennisfolio.Tennisfolio.infrastructure.api.tournament.tournamentInfo.TournamentInfoDTO;
-import com.tennisfolio.Tennisfolio.category.domain.model.Category;
-import com.tennisfolio.Tennisfolio.category.repository.CategoryRepository;
+import com.tennisfolio.Tennisfolio.player.application.PlayerService;
+import com.tennisfolio.Tennisfolio.player.domain.Player;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,54 +27,75 @@ public class TournamentSyncService {
     private final StrategyApiTemplate<LeagueDetailsDTO, Tournament> leagueDetailsApiTemplate;
     private final CategoryRepository categoryRepository;
     private final TournamentRepository tournamentRepository;
+    private final TransactionTemplate transactionTemplate;
 
-    public TournamentSyncService(StrategyApiTemplate<List<CategoryTournamentsDTO>, List<Tournament>> categoryTournamentsApiTemplate, StrategyApiTemplate<TournamentInfoDTO, Tournament> tournamentInfoApiTemplate, StrategyApiTemplate<LeagueDetailsDTO, Tournament> leagueDetailsApiTemplate, CategoryRepository categoryRepository, TournamentRepository tournamentRepository) {
+
+    public TournamentSyncService(StrategyApiTemplate<List<CategoryTournamentsDTO>,
+                                 List<Tournament>> categoryTournamentsApiTemplate,
+                                 StrategyApiTemplate<TournamentInfoDTO, Tournament> tournamentInfoApiTemplate,
+                                 StrategyApiTemplate<LeagueDetailsDTO, Tournament> leagueDetailsApiTemplate,
+                                 CategoryRepository categoryRepository,
+                                 TournamentRepository tournamentRepository,
+                                 PlatformTransactionManager transactionManager) {
         this.categoryTournamentsApiTemplate = categoryTournamentsApiTemplate;
         this.tournamentInfoApiTemplate = tournamentInfoApiTemplate;
         this.leagueDetailsApiTemplate = leagueDetailsApiTemplate;
         this.categoryRepository = categoryRepository;
         this.tournamentRepository = tournamentRepository;
+        this.transactionTemplate = new TransactionTemplate(transactionManager);
     }
 
 
-    public List<Tournament> saveTournamentList() {
-        List<String> categoryRapidIdList = categoryRepository.findAll().stream().map(Category::getRapidCategoryId).collect(Collectors.toList());
+    public void saveTournamentList() {
+        // 중복되는 category 제외
+        List<String> notInIds = List.of("-100", "-101");
 
+        // DB에 저장된 category 조회
+        List<String> categoryRapidIdList = categoryRepository.findByRapidCategoryIdNotIn(notInIds)
+                .stream()
+                .map(CategoryEntity::getRapidCategoryId)
+                .collect(Collectors.toList());
+
+        // 중복 제거를 위한 apiId 조회
+        Set<String> existingKeys = tournamentRepository.findAllRapidIds();
+
+        // 카테고리별 토너먼트 리스트
         categoryRapidIdList
                 .stream()
+                // api 조회
                 .map(rapidId -> categoryTournamentsApiTemplate.execute(rapidId))
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .map(TournamentEntity::fromListModel)
+                .filter(entity -> !existingKeys.contains(entity.getRapidTournamentId()))
+                .forEach(entity -> {
+                    tournamentRepository.collect(entity);
+                    tournamentRepository.flushWhenFull();
+                });
 
-        return categoryRapidIdList
-                .stream()
-                .map(rapidId -> tournamentInfoApiTemplate.execute(rapidId))
-                .collect(Collectors.toList());
 
+        // 남은 데이터 저장
+        tournamentRepository.flushAll();
     }
 
-    public List<Tournament> saveTournamentInfo() {
-
-        List<String> tournamentRapidIdList = tournamentRepository.findAll()
+    public void saveTournamentDetail(){
+        List<TournamentEntity> findTournaments = tournamentRepository.findAll();
+        findTournaments
                 .stream()
-                .map(Tournament::getRapidTournamentId)
-                .collect(Collectors.toList());
+                .map(tournamentEntity -> {
 
-        return tournamentRapidIdList
-                .stream()
-                .map(rapidId -> tournamentInfoApiTemplate.execute(rapidId))
-                .collect(Collectors.toList());
-    }
+                    Tournament tournamentInfo = tournamentInfoApiTemplate.execute(tournamentEntity.getRapidTournamentId());
+                    Tournament leagueDetails = leagueDetailsApiTemplate.execute(tournamentEntity.getRapidTournamentId());
+                    if(tournamentInfo != null){
+                        tournamentInfo.mergeTournament(leagueDetails);
+                    }else{
+                        tournamentInfo = new Tournament();
+                    }
 
-    public List<Tournament> saveLeagueDetails() {
-        List<String> tournamentRapidIdList = tournamentRepository.findAll()
-                .stream()
-                .map(Tournament::getRapidTournamentId)
-                .collect(Collectors.toList());
+                    TournamentEntity newTournament = TournamentEntity.fromModel(tournamentInfo);
+                    tournamentRepository.save(newTournament);
+                    return newTournament;
+                }).toList();
 
-        return tournamentRapidIdList
-                .stream()
-                .map(rapidId -> leagueDetailsApiTemplate.execute(rapidId))
-                .collect(Collectors.toList());
+
     }
 }
